<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imgDetail">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:cropToPadding="true"
        tools:src="@drawable/the_dark_knight_rises"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRate"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:background="@color/colorRate"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetail"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetail"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_toRightOf="@+id/tvTitle"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Genre"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@id/tvGenre"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Cast"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@+id/tvArtist"
                android:textColor="@color/black" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Year"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@+id/tvYear"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvProduction"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Production"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@+id/tvProduction"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Overview"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtOverview"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/tvOverview"
                android:textColor="@color/black" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
