<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TvShowFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTvShow"
        tools:listitem="@layout/item_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>